syntax = "proto3";

package order_service;

service OrderService {
  rpc CreateOrder (CreateOrderDto) returns (OrderDto);
  rpc ListOrders (ListOrdersDto) returns (OrderListDto);
}

message CreateOrderDto {
  string userId = 1;
  string productId = 2;
  int32 quantity = 3;
}

message OrderDto {
  string id = 1;
  string userId = 2;
  string productId = 3;
  int32 quantity = 4;
  double totalPrice = 5;
}

message ListOrdersDto {}

message OrderListDto {
  repeated OrderDto orders = 1;
}
